--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+.container {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 50px;
+}
+.content {
+  background-color: black;
+  width: 40%;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.item-content {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-content button {
+  width: 100%;
+  padding: 30px;
+  border-radius: 50%;
+}
+.item-button {
+  width: 15%;
 }
