--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,86 @@
   padding: 0;
 }
 .container {
+  background-image: url("./Images/bg_app.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   display: flex;
   justify-content: center;
   padding: 50px;
+  height: 621px;
 }
 .content {
   background-color: black;
-  width: 40%;
+  width: 30%;
   color: white;
+  font-size: 20px;
+  padding: 20px;
+  border-radius: 5%;
+  height: 500px;
 }
 .item-content {
   display: flex;
+  padding-bottom: 10px;
   width: 100%;
   justify-content: space-around;
 }
 .item-content button {
   width: 100%;
-  padding: 30px;
+  font-size: 19px;
   border-radius: 50%;
+  height: 66px;
+}
+.item-content button:hover {
+  background-color: rgb(129, 129, 129);
+}
+.show-result {
+  height: 50px;
 }
 .item-button {
-  width: 15%;
+  width: 16%;
+  text-align: center;
+}
+.content-top {
+  text-align: right;
+  padding-right: 20px;
+}
+/* Mobie */
+@media only screen and (max-width: 740px) {
+  .container {
+    padding: 10px 0;
+  }
+  .content {
+    width: 50%;
+  }
+  .item-content button {
+    padding: 0;
+    height: 60px;
+    font-size: 13px;
+  }
+}
+
+/* Tablet, iPad Pro */
+@media only screen and (min-width: 740px) and (max-width: 1366px) {
+  .item-content button {
+    padding: 0;
+    width: 70px;
+    height: 65px;
+    font-size: 20px;
+  }
+  .content {
+    height: 500px;
+    width: 60%;
+  }
+}
+
+/* Other */
+@media only screen and (max-width: 415px) {
+  .item-content button {
+    height: 35px;
+  }
+  .content {
+    height: 330px;
+  }
 }
